Ajout de la route PUT /session/{id} + Modification route POST /matieres/{id}/sessions pour inclure les details et retourner l'objet cree
